Fix nav button misalignment

--- a/toms-portfolio/src/app/nav-button/nav-button.component.scss
+++ b/toms-portfolio/src/app/nav-button/nav-button.component.scss
@@ -1,18 +1,20 @@
-a {
-    display: inline-block;
-    position: relative;
-    font-size: 30px;
-    width: 60px;
-    height: 60px;
-    cursor: pointer;
-}
+.nav-button {
+    a {
+        display: inline-block;
+        position: relative;
+        font-size: 30px;
+        width: 60px;
+        height: 60px;
+        cursor: pointer;
+    }
 
-a:hover {
-    color: var(--secondary);
-}
+    a:hover {
+        color: var(--secondary);
+    }
 
-a:active {
-    color: var(--primary);
+    a:active {
+        color: var(--primary);
+    }
 }
 
 .legacy a {
